# ESA_Accumalator

./: .gitignore  CMakeLists.txt  README.md
examples/: comprehensive_test.cpp  performance_test.cpp  simple_polynomial_examples.cpp
include/: basic_types.h  expressive_accumulator.h  polynomial_commitment.h  simple_polynomial_accumulator.h
scripts/: build.sh  test.sh
src/: bigint_impl.cpp  expressive_accumulator.cpp  group_element_impl.cpp  polynomial_commitment.cpp  simple_polynomial_accumulator.cpp  zk_proof_impl.cpp
